# rag-using-langchain

./: .gitignore  LICENSE  README.md  pyproject.toml  rag_notebook.ipynb
data/: sample_data.json
